--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -6,6 +6,7 @@
 		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:style="clr-namespace:LanguageWeaverProvider.Style"
 		xmlns:local="clr-namespace:LanguageWeaverProvider.ViewModel"
+		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 		xmlns:edgeView="clr-namespace:LanguageWeaverProvider.View.Edge"
 		xmlns:cloudView="clr-namespace:LanguageWeaverProvider.View.Cloud"
 		xmlns:edgeViewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Edge"
@@ -13,12 +14,14 @@
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance local:CredentialsMainViewModel}"
+		Background="#f4f4f4"
 		WindowStartupLocation="CenterScreen"
 		Title="Language Weaver Provider"
-		ResizeMode="CanResize"
+		ResizeMode="NoResize"
 		WindowStyle="None"
 		Height="450"
 		Width="600"
+		FontFamily="Segoe UI"
 		d:DesignHeight="450"
 		d:DesignWidth="600">
 
@@ -36,6 +39,7 @@
 						Value="HighQuality" />
 			</Style>
 
+			<converters:InvertedBoolean x:Key="InvertedBoolean" />
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
 			<DataTemplate DataType="{x:Type cloudViewModel:CloudCredentialsViewModel}">
@@ -55,14 +59,137 @@
 				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
 
-			<style:WindowsControl Grid.Row="0" />
+			<style:WindowsControl Grid.Row="0"
+								  Margin="0 24" />
 
-			<GroupBox Grid.Row="1"
-					  Header="Language Weaver Providers"
-					  Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
-					  Style="{StaticResource DefaultGroupBox}"
-					  Margin="24 0 24 24"
-					  Padding="12 24 12 12">
+			<Grid Grid.Row="1"
+				  VerticalAlignment="Bottom"
+				  Visibility="{Binding IsUserAttemptingLogin, Converter={StaticResource BooleanToVisibilityConverter}}">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*" />
+				</Grid.RowDefinitions>
+
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+
+				<Border BorderThickness="0 1 0 0"
+						BorderBrush="#D3D3D3"
+						VerticalAlignment="Bottom"
+						Grid.Column="0"
+						Grid.Row="1"
+						Height="22"
+						Margin="0 0 0 0"
+						Grid.ColumnSpan="3">
+					<Rectangle>
+						<Rectangle.Fill>
+							<LinearGradientBrush StartPoint="0,0"
+												 EndPoint="1,0">
+								<GradientStop x:Name="gradientTransparent"
+											  Color="Transparent"
+											  Offset="1" />
+								<GradientStop x:Name="gradientColored"
+											  Color="#008080"
+											  Offset="0" />
+							</LinearGradientBrush>
+						</Rectangle.Fill>
+					</Rectangle>
+
+					<Border.Triggers>
+						<EventTrigger RoutedEvent="FrameworkElement.Loaded">
+							<BeginStoryboard>
+								<Storyboard RepeatBehavior="Forever">
+
+									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="-0.5"
+													 Duration="0:0:0" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientColored"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="-0.5"
+													 Duration="0:0:0" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="1.5"
+													 Duration="0:0:0.5" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientColored"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="1.5"
+													 BeginTime="0:0:0.5"
+													 Duration="0:0:0.5" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientColored"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="-0.5"
+													 BeginTime="0:0:1"
+													 Duration="0:0:0" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="-0.5"
+													 BeginTime="0:0:1"
+													 Duration="0:0:0" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientColored"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="1.5"
+													 BeginTime="0:0:1"
+													 Duration="0:0:0.5" />
+
+									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
+													 Storyboard.TargetProperty="Offset"
+													 From="-0.5"
+													 To="1.5"
+													 BeginTime="0:0:1.5"
+													 Duration="0:0:0.5" />
+								</Storyboard>
+
+							</BeginStoryboard>
+						</EventTrigger>
+					</Border.Triggers>
+				</Border>
+
+				<TextBlock Text="{Binding CurrentActionMessage}"
+						   FontWeight="DemiBold"
+						   Grid.Row="1"
+						   Grid.Column="2"
+						   HorizontalAlignment="Right"
+						   VerticalAlignment="Bottom"
+						   Margin="0 0 24 3">
+					<TextBlock.Effect>
+						<DropShadowEffect ShadowDepth="0"
+										  Color="#f4f4f4"
+										  Opacity="3"
+										  BlurRadius="7" />
+					</TextBlock.Effect>
+				</TextBlock>
+
+			</Grid>
+
+			<Border Grid.Row="1"
+					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
+					Background="#ffffff"
+					CornerRadius="4"
+					Margin="24 0 24 24"
+					Padding="12 24 12 12">
+				<Border.Effect>
+					<DropShadowEffect ShadowDepth="0"
+									  Color="#d4d4d4"
+									  Opacity="1" />
+				</Border.Effect>
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="Auto" />
@@ -72,23 +199,25 @@
 					<TextBox Grid.Row="0"
 							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 							 Cursor="Arrow"
-							 Text="Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation." 
-							 FontSize="13"/>
+							 Text="Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation."
+							 FontSize="14"
+							 HorizontalAlignment="Center" />
 
 					<StackPanel Grid.Row="1"
 								VerticalAlignment="Bottom">
 						<Button Content="Language Weaver"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
-								CommandParameter="Cloud"
+								CommandParameter="{x:Static root:Constants.CloudService}"
 								Cursor="Hand"
 								Width="200"
 								Margin="0 8" />
 
-						<Button Content="Language Weaver Edge"
+						<Button Content="LW Edge (coming soon)"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
-								CommandParameter="Edge"
+								CommandParameter="{x:Static root:Constants.EdgeService}"
+								IsEnabled="False"
 								Cursor="Hand"
 								Width="200"
 								Margin="0 8" />
@@ -101,14 +230,20 @@
 								Margin="0 8" />
 					</StackPanel>
 				</Grid>
-			</GroupBox>
+			</Border>
 
-			<GroupBox Grid.Row="1"
-					  Header="Authentication"
-					  Style="{StaticResource DefaultGroupBox}"
-					  Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-					  Margin="24 0 24 24"
-					  Padding="12 24 12 12">
+			<Border Grid.Row="1"
+					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
+					Background="#ffffff"
+					CornerRadius="4"
+					Margin="24 0 24 24"
+					Padding="12 24 12 12">
+				<Border.Effect>
+					<DropShadowEffect ShadowDepth="0"
+									  Color="#d4d4d4"
+									  Opacity="1" />
+				</Border.Effect>
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="*" />
@@ -118,8 +253,9 @@
 					<TextBox Grid.Row="0"
 							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 							 Cursor="Arrow"
-							 Text="Placeholder text" 
-							 FontSize="13"/>
+							 Text="Please select the method you'd like to use to log in. You will be asked to log in in the next step."
+							 Visibility="{Binding ProviderView.IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+							 FontSize="13" />
 
 					<StackPanel Grid.Row="1">
 						<ContentControl Content="{Binding ProviderView}"
@@ -138,7 +274,8 @@
 								Margin="0 0 0 8" />
 					</StackPanel>
 				</Grid>
-			</GroupBox>
+			</Border>
+
 		</Grid>
 	</Border>
 </Window>
