--- a/LanguageWeaverProvider/Style/WindowsBorder.xaml
+++ b/LanguageWeaverProvider/Style/WindowsBorder.xaml
@@ -10,7 +10,7 @@
 		<Setter Property="BorderThickness"
 				Value="1" />
 		<Setter Property="BorderBrush"
-				Value="Transparent" />
+				Value="#b0b0b0" />
 		<Style.Triggers>
 			<DataTrigger Binding="{Binding WindowState, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
 						 Value="Maximized">
@@ -20,8 +20,11 @@
 			<DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=IsActive}"
 						 Value="False">
 				<Setter Property="BorderBrush"
-						Value="Transparent" />
+						Value="#c4c4c4" />
+				<Setter Property="BorderThickness"
+						Value="1" />
 			</DataTrigger>
 		</Style.Triggers>
 	</Style>
+	
 </ResourceDictionary>
