--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -31,153 +31,156 @@
 		</ResourceDictionary>
 	</UserControl.Resources>
 
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="4*" />
-		</Grid.ColumnDefinitions>
-
-		<StackPanel Grid.Row="0"
-					Grid.ColumnSpan="2"
-					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
-			<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
-					Command="{Binding SignLoggedUserCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-					Visibility="{Binding TranslationOptions.CloudCredentials.UserID, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
-					Cursor="Hand"
-					HorizontalAlignment="Center"
-					Width="200"
-					Margin="0 0 0 8">
-				<Button.Content>
-					<StackPanel Orientation="Horizontal">
-						<TextBlock Text="•"
-								   Foreground="#3dfc03"/>
-						<TextBlock Text="" 
-								   Margin="0 0 0 0"/>
-						<TextBlock Text="{Binding TranslationOptions.CloudCredentials.UserID}" 
-								   Margin="4 0 0 0"/>
-					</StackPanel>
-				</Button.Content>
-			</Button>
-			<Button Content="Single sign-on"
-					Style="{StaticResource Sdl.Button.PrimaryStyle}"
-					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-					IsEnabled="False"
-					Cursor="Hand"
-					Width="200"
-					Margin="0 8" />
-			<Button Content="User credentials"
-					Style="{StaticResource Sdl.Button.PrimaryStyle}"
-					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-					Cursor="Hand"
-					Width="200"
-					Margin="0 8" />
-			<Button Content="User secret"
-					Style="{StaticResource Sdl.Button.PrimaryStyle}"
-					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
-					Cursor="Hand"
-					Width="200"
-					Margin="0 8" />
-		</StackPanel>
-
-		<Grid Grid.Row="1"
-			  Grid.ColumnSpan="2"
-			  Margin="24 0">
+	<StackPanel>
+		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*" />
-				<RowDefinition Height="*" />
-				<RowDefinition Height="*" />
+				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
 				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
 
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="5*" />
+				<ColumnDefinition Width="4*" />
 			</Grid.ColumnDefinitions>
 
-			<!-- User ID -->
-			<TextBlock Grid.Row="0"
-					   Grid.Column="0"
-					   Text="User ID"
-					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-					   VerticalAlignment="Center" />
+			<StackPanel Grid.Row="0"
+						Grid.ColumnSpan="2"
+						Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
+				<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
+						Command="{Binding SignLoggedUserCommand}"
+						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+					Visibility="{Binding TranslationOptions.CloudCredentials.UserID, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
+						Cursor="Hand"
+						HorizontalAlignment="Center"
+						Width="200"
+						Margin="0 0 0 8">
+					<Button.Content>
+						<StackPanel Orientation="Horizontal">
+							<TextBlock Text="•"
+									   Foreground="#3dfc03" />
+							<TextBlock Text=""
+									   Margin="0 0 0 0" />
+							<TextBlock Text="{Binding TranslationOptions.CloudCredentials.UserID}"
+									   Margin="4 0 0 0" />
+						</StackPanel>
+					</Button.Content>
+				</Button>
 
-			<TextBox Grid.Row="0"
-					 Grid.ColumnSpan="2"
-					 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
-					 Style="{StaticResource WatermarkTextBox}"
-					 controls:TextBoxWatermarkHelper.WatermarkText="User ID"
-					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
-					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
-					 Margin="0 8"/>
-			<!-- User ID -->
+				<Button Content="Single sign-on"
+						Style="{StaticResource Sdl.Button.PrimaryStyle}"
+						Command="{Binding SelectAuthenticationTypeCommand}"
+						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+						IsEnabled="False"
+						Cursor="Hand"
+						Width="200"
+						Margin="0 8" />
+				<Button Content="User credentials"
+						Style="{StaticResource Sdl.Button.PrimaryStyle}"
+						Command="{Binding SelectAuthenticationTypeCommand}"
+						CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+						Cursor="Hand"
+						Width="200"
+						Margin="0 8" />
+				<Button Content="User secret"
+						Style="{StaticResource Sdl.Button.PrimaryStyle}"
+						Command="{Binding SelectAuthenticationTypeCommand}"
+						CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
+						Cursor="Hand"
+						Width="200"
+						Margin="0 8" />
+			</StackPanel>
 
-			<!-- Password -->
-			<PasswordBox Grid.Row="1"
+			<Grid Grid.Row="1"
+				  Grid.ColumnSpan="2"
+				  Margin="24 0">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*" />
+					<RowDefinition Height="*" />
+					<RowDefinition Height="*" />
+					<RowDefinition Height="*" />
+					<RowDefinition Height="*" />
+				</Grid.RowDefinitions>
+
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="5*" />
+				</Grid.ColumnDefinitions>
+
+				<!-- User ID -->
+				<TextBlock Grid.Row="0"
+						   Grid.Column="0"
+						   Text="User ID"
+						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+						   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						   VerticalAlignment="Center" />
+
+				<TextBox Grid.Row="0"
 						 Grid.ColumnSpan="2"
-						 PasswordChanged="UserPassword_Changed"
-						 Style="{StaticResource WatermarkPasswordBox}"
-						 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
-						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
-			<!-- Password -->
+						 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
+						 Style="{StaticResource WatermarkTextBox}"
+						 controls:TextBoxWatermarkHelper.WatermarkText="User ID"
+						 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
+						 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						 Margin="0 8" />
+				<!-- User ID -->
 
-			<!-- Client ID -->
-			<TextBox Grid.Row="0"
-					 Grid.ColumnSpan="2"
-					 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
-					 Style="{StaticResource WatermarkTextBox}"
-					 controls:TextBoxWatermarkHelper.WatermarkText="Client ID"
-					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
-					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-					 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-					 Margin="0 8" />
-			<!-- Client ID -->
+				<!-- Password -->
+				<PasswordBox Grid.Row="1"
+							 Grid.ColumnSpan="2"
+							 PasswordChanged="UserPassword_Changed"
+							 Style="{StaticResource WatermarkPasswordBox}"
+							 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
+							 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
+				<!-- Password -->
 
-			<!-- Client Secret -->
-
-
-			<PasswordBox Grid.Row="3"
+				<!-- Client ID -->
+				<TextBox Grid.Row="0"
 						 Grid.ColumnSpan="2"
-						 PasswordChanged="ClientSecret_Changed"
-						 Style="{StaticResource WatermarkPasswordBox}"
-						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
-						 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
-			<!-- Client Secret -->
+						 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
+						 Style="{StaticResource WatermarkTextBox}"
+						 controls:TextBoxWatermarkHelper.WatermarkText="Client ID"
+						 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+						 controls:TextBoxWatermarkHelper.ButtonCommandParameter="CliendId"
+						 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+						 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+						 Margin="0 8" />
+				<!-- Client ID -->
+
+				<!-- Client Secret -->
+
+				<PasswordBox Grid.Row="3"
+							 Grid.ColumnSpan="2"
+							 PasswordChanged="ClientSecret_Changed"
+							 Style="{StaticResource WatermarkPasswordBox}"
+							 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
+							 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
+				<!-- Client Secret -->
+			</Grid>
+
+			<Button Grid.Row="2"
+					Grid.ColumnSpan="2"
+					Content="Sign in"
+					Command="{Binding SignInCommand}"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					Cursor="Hand"
+					Width="200"
+					Margin="0 32 0 8" />
+
+			<Button Grid.Row="3"
+					Grid.ColumnSpan="2"
+					Content="Change authentication type"
+					Command="{Binding BackCommand}"
+					Style="{StaticResource Sdl.Button.SecondaryStyle}"
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					Cursor="Hand"
+					Width="200"
+					Margin="0 8 0 8" />
 		</Grid>
+	</StackPanel>
 
-		<Button Grid.Row="2"
-				Grid.ColumnSpan="2"
-				Content="Sign in"
-				Command="{Binding SignInCommand}"
-				Style="{StaticResource Sdl.Button.PrimaryStyle}"
-				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				Cursor="Hand"
-				Width="200"
-				Margin="0 32 0 8" />
-
-		<Button Grid.Row="3"
-				Grid.ColumnSpan="2"
-				Content="Change authentication type"
-				Command="{Binding BackCommand}"
-				Style="{StaticResource Sdl.Button.SecondaryStyle}"
-				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				Cursor="Hand"
-				Width="200"
-				Margin="0 8 0 8" />
-	</Grid>
 </UserControl>
